kubernetes/core-service-deployment.yml
# kubernetes/core-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-service
  template:
    metadata:
      labels:
        app: core-service
    spec:
      containers:
        - name: core-service
          image: core-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
