kubernetes/core-service-service.yml
# kubernetes/core-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  selector:
    app: core-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
