kubernetes/frontend-service.yml
# kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
